<resources>
    <string name="app_name">RegionalTaxiDriver</string>
    <string name="google_map_api_key">AIzaSyBkbkmB3-DgM4IXuc3g-smbbrOLUi6jJ54</string>
    <string name="you_are_not_online">You are not online</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_next">Next</string>
    <string name="tv_skip">Skip</string>
    <string name="tv_intro1">Yaqin-atrofdagi jamoat haydovchisi olib ketishini so\'rang</string>
    <string name="tv_start">Start</string>
    <string name="tv_intro2">Katta haydovchilar tarmog\'i sizga qulay, xavfsiz va arzon sayohatni topishga yordam beradi</string>
    <string name="tv_intro3">Haydovchini oldindan bilib oling va xaritada real vaqt rejimida joriy manzilni ko\'rish imkoniyatiga ega bo\'ling</string>

    <!--    month -->
    <string name="jan">Yan</string>
    <string name="feb">Fev</string>
    <string name="march">Mart</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="jun">Iyun</string>
    <string name="july">Iyul</string>
    <string name="aug">Avg</string>
    <string name="sep">Sen</string>
    <string name="oct">Okt</string>
    <string name="nov">Noy</string>
    <string name="dec">Dek</string>
    <string name="registerSimple">Kirish</string>
    <string name="auth_phone_title">Войти в систему</string>
    <string name="phone_auth_text">Через номер телефона</string>
    <string name="text_phone">Номер телефона</string>
    <string name="enterSomething">Ввидени что-то</string>
    <string name="fragment_login_phone_sms">Наш номер номер придёт СМС с кодом подверждение</string>
    <string name="numberDoesNotExist">В систему отсуствует такой номер</string>
    <string name="signIn">Войти</string>
    <string name="smsBack">Вход</string>
    <string name="enterCode">Войти код-парол</string>
    <string name="sendSMStoNum">На ваш номер +998 90 568 1015 отправлен SMS с кодом</string>
    <string name="sendAgain">Отправит занова</string>
    <string name="continue_">Продолжить</string>
    <string name="region_taxi">Region</string>
    <string name="activity">Activity</string>
    <string name="profile">Профиль</string>
    <string name="no_internet">No internet connection</string>
    <string name="online">Online</string>
    <string name="profile_toolbar">Profile</string>
    <string name="fragment_profile_first">Ваш ID</string>
    <string name="fragment_profile_first_status">Ваш уровен</string>
    <string name="profile_interest_rate">Процентная ставка</string>
    <string name="fragment_profile_earning">Заработок</string>
    <string name="learning">Обучение</string>
    <string name="fragment_profile_balance">Мои карты</string>
    <string name="fragment_profile_transport">Транспорт</string>
    <string name="fragment_profile_language">Язык</string>
    <string name="fragment_profile_night">Ночной режим</string>
    <string name="fragment_profile_setting">Настройки</string>
    <string name="fragment_profile_first_support">Служба поддержки</string>
    <string name="fragment_profile_first_exit">Выйти из профиля</string>
    <string name="order_fragment_title">Активные заказы</string>
    <string name="no_order">No orders</string>
    <string name="from">Откуда:</string>
    <string name="tv_first_name">First name</string>
    <string name="tv_last_name">Last name</string>
    <string name="what_is_r_name">What\'s your name?</string>
    <string name="tv_data_birth">Data birth</string>
    <string name="tv_you_are_not_old_enough_to_use_the_program">You are not old enough to use the program</string>
    <string name="tv_enter_requested">Quyida so\'ralgan ma\'lumotlarni kiriting</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="add_photo_title">Xavfsizroq va yaxshiroq buyurtmalar uchun suratingizni qo\'shing</string>
    <string name="safe_ride_photo_des">Sizning fotosuratingiz mijoz tomonidan sizni xavfsizroq buyurtmalaringiz uchun ishlatiladi.</string>
    <string name="safe_ride_photo_des_second">Mijozlar sizning fotosuratingizni faqat sayohat paytida ko\'rishlari mumkin va sayohat tugagandan so\'ng unga kira olmaydi.</string>
    <string name="next">Next</string>
    <string name="add_photo">Add a photo</string>
    <string name="later">Later</string>
    <string name="permissions">Permissions</string>
    <string name="city_mode">City mode</string>
    <string name="more_about_city_mode">Learn more about city mode</string>
    <string name="online_registration">Online registration</string>
    <string name="status">STATUS:</string>
    <string name="reason">REASON :</string>
    <string name="we_need_this_information_to_register">To register, we need this data</string>
    <string name="license">Identification card</string>
    <string name="passport_or_id_card">Passport or ID card</string>
    <string name="driver_license">Driver\'s license</string>
    <string name="about_car">Transport data</string>
    <string name="select_transport">Choose a transport</string>
    <string name="tex_passport">Vehicle registration certificate (Technical passport)</string>
    <string name="photo_transport">Transport photography</string>
    <string name="you_cant_edit">You cannot edit your details during the verification phase!</string>
    <string name="send_for_review">Submit for review</string>
    <string name="successfully_sent">Successfully sent!</string>
    <string name="sending_data">Sending data...</string>
    <string name="select_document">Select a document</string>
    <string name="passport">Passport</string>
    <string name="id_card">ID card</string>
    <string name="series_number">Series and number</string>
    <string name="day_month_year">dd/mm/yyyy</string>
    <string name="wrong_date">Invalid date</string>
    <string name="photo_document">Document photo</string>
    <string name="face_part_photo_document">Front side</string>
    <string name="back_side">The reverse side</string>
    <string name="person_with_document">Photo of a face on the background of a document</string>
    <string name="with_place_id_photo_document">With a residence permit</string>
    <string name="ready">Ready</string>
    <string name="who_manufacturer">Who is the manufacturer?</string>
    <string name="search_mark">Brand Search</string>
    <string name="how_is_your_model">What is your model?</string>
    <string name="color_transport">What color is your car?</string>
    <string name="when_car_manufactured">In what year was your car released</string>
    <string name="number_of_car">What is the license plate number of the car?</string>
    <string name="country">Country</string>
    <string name="car_number">State number</string>
    <string name="front_side_auto">Car in front</string>
    <string name="left_side_auto">Car on the left</string>
    <string name="back_side_auto">Car rear</string>
    <string name="right_auto">Car on the right</string>
    <string name="first_line_salon">Front row of seats</string>
    <string name="back_line_salon">Rear row of seats</string>
    <string name="baggage">Baggage</string>
    <string name="photo_tex_passport">Photo of tech.passports</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="russia">Russia</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="select_country">Select a country</string>
    <string name="uzb">Uzbekistan</string>
    <string name="tv_male">🤵Male</string>
    <string name="tv_female">👩‍💼Female</string>
    <string name="exit">Close</string>
    <string name="error_complete_order_des">There was an error completing the order due to poor internet connection. Please try to complete the order later.</string>
    <string name="error_occurred">Error occured</string>
    <string name="take_from_the_client">Take from the client</string>
    <string name="autoclicker_des">Disable autoclicker to use the program</string>
    <string name="location">Location</string>
    <string name="location_request_info">This program uses your location to find out where you are when a customer orders a taxi, even if the program is closed, to find the nearest taxi to the customer.</string>
    <string name="draw_overlay_title">Pop-up windows</string>
    <string name="draw_overlay_description">Please allow Mana Driver to appear on top of other apps to be able to accept incoming orders.</string>
    <string name="battery_title">Disable power saving mode</string>
    <string name="battery_description">It is necessary to disable the power saving mode. Because you may not know about new orders that come to you if your screen is turned off when the phone is in power saving mode.</string>
    <string name="on_gps_title">Turn on GPS</string>
    <string name="on_gps_description">You need to turn on GPS so that we can determine your location and find the most convenient and nearest orders for you.</string>
    <string name="miui_title">Other Xiaomi Permissions</string>
    <string name="miui_description">On devices manufactured by Xiaomi, you need to enable access to applications from the background, that is, enable the Show pop-ups when working in the backgroundpermission in the Other permissionssection on the application settings page on your phone.</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="app_version">App Version</string>
    <string name="request_new_code">Request a new code</string>
    <string name="really_want_to_exit">Do you really want to leave?</string>
    <string name="des_really_want_to_exit_des">The changes will be undone if you log out and you need to fill them in again.</string>
    <string name="close">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="write_sms_code_des">We have sent an SMS message with an activation code to your phone</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="change_photo">Change Photo</string>
    <string name="how_does_it_look">How does it look?</string>
    <string name="how_look_des">Make sure your face is centered and visible. This photo will help customers recognize you.</string>
    <string name="save">Save</string>
    <string name="retake">Again</string>
    <string name="front_side">Front side</string>
    <string name="front_side_des_1">Get the ID of the card to match the frame.Will convince that:</string>
    <string name="front_side_des2">-ID card is well lit -ID card is not overlapped with a finger -There are no glare</string>
    <string name="take_photo">Take a photo</string>
</resources>