<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_12_back"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_18dp"
    android:paddingTop="@dimen/dimen_20dp"
    android:paddingBottom="@dimen/dimen_26dp">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/txt_display_medium_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/really_want_to_exit"
        android:textColor="@color/brand_main_primary" />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/txt_display_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/des_really_want_to_exit_des" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exit_button"
            style="@style/secondary_main_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:text="@string/close" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            style="@style/main_button_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>