<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_12_back"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_18dp"
    android:paddingTop="@dimen/dimen_20dp"
    android:paddingBottom="@dimen/dimen_26dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/txt_display_medium_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_occurred"
        android:textColor="@color/moscow_100" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/price_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/txt_display_semibold_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_from_the_client"
            android:textColor="@color/brand_main_primary" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/txt_display_semibold_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_3dp"
            android:text=":"
            android:textColor="@color/brand_main_primary"
            tools:ignore="HardcodedText" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price_tv"
            style="@style/txt_display_bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:text="16 770sum"
            android:textColor="@color/brand_main_primary"
            tools:ignore="HardcodedText" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tariff_tv"
        style="@style/txt_display_regular_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/error_complete_order_des"
        android:textColor="@color/brand_main_primary" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            style="@style/main_button_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_weight="1"
            android:text="@string/exit" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>